fix popular misalign.

--- a/src/app/_shared/components/most-popular/most-popular.component.scss
+++ b/src/app/_shared/components/most-popular/most-popular.component.scss
@@ -15,6 +15,9 @@
     }
   }
   .card {
+    .card-img-top {
+      height: 13.5vw;
+    }
     .card-body {
       background-color: $red;
 
